# Program-m

./: .gitignore  Dashboard_Tasarim_Ornekleri.md  Excel_Stok_Sistemi_Kurulum_Rehberi.md  Form_Kodlari_Tam.txt  HIZLI_KURULUM.md  KURULUM_REHBERI.md  README.md  README_WINDOWS.md  SISTEM_TESLIM_PAKETI.md  Sistem_Test_Raporu.md  StokMuhasebeLojistik.sln  Stok_Yonetim_Sistemi_TAMAMLANDI.xlsx  VBA_Kodlari_Tam.txt  WINDOWS_KURULUM.md  check_system.bat  setup_windows.bat  start_application.bat  stop_application.bat
StokMuhasebeLojistik/: App.xaml  App.xaml.cs  StokMuhasebeLojistik.csproj  appsettings.json
StokMuhasebeLojistik/Converters/: Converters.cs
StokMuhasebeLojistik/Data/: ApplicationDbContext.cs  DatabaseSeeder.cs
StokMuhasebeLojistik/Models/: Company.cs  CurrentAccount.cs  FinancialTransaction.cs  StockItem.cs  Trip.cs  User.cs  Vehicle.cs
StokMuhasebeLojistik/Resources/: Styles.xaml
StokMuhasebeLojistik/Services/: AuthenticationService.cs  CompanyService.cs  CurrentAccountService.cs  FinancialService.cs  IAuthenticationService.cs  ICompanyService.cs  ICurrentAccountService.cs  (+9 more)
backend/: alembic.ini  pyproject.toml  stock_management.db
backend/alembic/: env.py
backend/alembic/versions/: bb3cc8b0d3d9_initial_migration.py
backend/app/: crud.py  database.py  main.py  models.py  schemas.py  seed_data.py
backend/app/routers/: accounting.py  bank.py  cash.py  dashboard.py  exchange.py  stock.py
desktop-app/: main.js  package-lock.json  package.json
frontend/: package-lock.json  package.json
python-desktop-app/: KURULUM.txt  README.md  requirements.txt
(+74 files in other folders)
